# MarketPulse-India

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  cdk.context.json  check.py  docker-compose.yml  pyproject.toml  requirements.txt  uvicorn_err.txt  uvicorn_out.txt
.claude/: .mcp.json  CLAUDE.md  settings.json  settings.local.json
.claude/commands/: add-mcp-tool.md  backtest.md  check-sebi.md  db-migrate.md  deploy-aws.md  run-evals.md  scaffold-mcp.md  scaffold-node.md  seed-corpus.md
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml  test.yml
agents/: checkpointer.py  graph.py  llm.py  parsers.py  sector_graph.py  state.py
agents/nodes/: __init__.py  analysis.py  concall.py  context.py  fallback.py  fetch.py  grade.py  institutional.py  parse.py  rag.py  signal.py
backend/: Dockerfile  auth.py  config.py  database.py  error_handlers.py  exceptions.py  logging_config.py  main.py  market_hours.py  middleware.py  models.py  monitoring.py  repositories.py  stream_runner.py  websocket_manager.py
backend/alerts/: __init__.py  dispatcher.py
backend/routers/: analyze.py  market.py  sector.py  signals.py  stocks.py  watchlist.py  webhook.py  ws.py
cdk.out/: MarketPulseEcsStack.assets.json  MarketPulseEcsStack.metadata.json  MarketPulseEcsStack.template.json  MarketPulseFrontendStack.assets.json  MarketPulseFrontendStack.metadata.json  MarketPulseFrontendStack.template.json  MarketPulseObservabilityStack.assets.json  MarketPulseObservabilityStack.metadata.json  MarketPulseObservabilityStack.template.json  MarketPulsePollingStack.assets.json  MarketPulsePollingStack.metadata.json  MarketPulsePollingStack.template.json  MarketPulseWafStack.assets.json  MarketPulseWafStack.metadata.json  MarketPulseWafStack.template.json  manifest.json  tree.json
cdk.out/asset.8eb86f9bff18b69856566f72882ec6c7e2110321c2ff8cf19b61f9da8126b8a9/: handler.py
db/: __init__.py  vector_store.py
docs/: API.md  ARCHITECTURE.md  BACKTESTING_REPORT.md  LINKEDIN_POST.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AgentTrace.jsx  AnalysisTrigger.jsx  AnnouncementFeed.jsx  Header.jsx  PriceChart.jsx  ResultsCalendar.jsx  Sidebar.jsx  SignalHistoryTable.jsx
frontend/src/context/: AuthContext.jsx  WebSocketContext.jsx
frontend/src/hooks/: useMarketData.js  useSignals.js
frontend/src/pages/: CalendarPage.jsx  DashboardPage.jsx  LoginPage.jsx  SectorPage.jsx  SignalsPage.jsx
infra/: app.py  cdk.json  ecs_stack.py  frontend_stack.py  observability_stack.py  polling_stack.py  waf_stack.py
lambdas/morning_digest/: __init__.py  handler.py  requirements.txt
lambdas/pre_result_alert/: __init__.py  handler.py  requirements.txt
mcp_servers/: _cache.py
mcp_servers/bse/: server.py
mcp_servers/indian_news/: __init__.py  server.py
mcp_servers/nse/: server.py  session.py
mcp_servers/screener/: server.py
mcp_servers/yfinance_india/: server.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_rls_neon.py
scripts/: _check_smoke.py  _parse_bandit.py  _secrets_audit.py  _validate_day27.py  check_sebi.py  gen_icons.py  push_secrets_to_aws.py  run_evals.py  run_load_test.py  security_scan.py  seed_corpus.py  seed_stocks.py  seed_test_user.py  seed_watched_symbols.py  smoke_test.py  test_alerts.py  test_analysis.py  test_api.py  test_aws.py  test_concall.py  test_error_handling.py  test_full_pipeline.py  test_graph.py  test_mcps.py  test_monitoring.py  test_promoter_intelligence.py  test_screener.py  test_sector_graph.py  test_signal.py  test_websocket.py
tests/: test_alert_dispatcher.py  test_bse_mcp.py  test_bse_shp_quick.py  test_health.py  test_lambda_handlers.py  test_nse_mcp.py  test_promoter_intelligence.py  test_sector_graph_smoke.py  test_yfinance_india_mcp.py
tests/backtesting/: __init__.py  backtest.py  test_backtest.py
tests/e2e/: conftest.py  test_dashboard.py
tests/evals/: dataset.py  evaluators.py  langsmith_evals.py  langsmith_sync.py  runner.py
tests/load/: __init__.py  locustfile.py  report.html  stats_failures.csv  stats_stats.csv  stats_stats_history.csv
tests/security/: bandit_report.json
