[project]
name = "marketpulse-india"
version = "0.1.0"
description = "Autonomous NSE/BSE stock intelligence agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "MarketPulse India" }]

dependencies = [
    # --- Web / API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "websockets>=13.0",
    "starlette>=0.41",

    # --- Data validation / config ---
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",  # only for Alembic offline mode; runtime uses asyncpg

    # --- Cache / queue ---
    "redis[hiredis]>=5.2",

    # --- LLM / agents (OpenAI-only — do NOT add Anthropic SDK) ---
    "openai>=1.55",
    "langchain>=0.3",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "tiktoken>=0.8",

    # --- MCP ---
    "mcp>=1.0",

    # --- Data / market data ---
    "pandas>=2.2",
    "numpy>=2.1",
    "pyarrow>=18.0",
    "yfinance>=0.2.50",
    "nsepython>=2.9",
    "requests>=2.32",  # NSE/BSE MCP servers use requests.Session for cookie management

    # --- Observability ---
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # --- Auth ---
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",

    # --- News / RSS ---
    "feedparser>=6.0",

    # --- Misc ---
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "orjson>=3.10",
    "tzdata>=2024.2",  # required on Windows for Asia/Kolkata
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "respx>=0.21",  # httpx mocking
    "freezegun>=1.5",
    "types-redis",
    "types-requests",
    "types-python-dateutil",
    "pre-commit>=4.0",
]
evals = [
    "deepeval>=2.0",
    "ragas>=0.2",
]
infra = [
    "boto3>=1.35",
    "aws-lambda-powertools>=3.4",
]

[tool.uv]
dev-dependencies = []  # we use [project.optional-dependencies].dev instead

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "agents", "mcp_servers", "lambdas"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["venv", ".venv", "frontend", "infra/.terraform"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pyflakes / pycodestyle
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear
    "ASYNC",           # async-specific lints
    "S",               # bandit-like security
    "DTZ",             # datetime-tz checks
    "RUF",             # ruff-specific
    "SIM",             # simplify
    "TID",             # tidy imports
]
ignore = [
    "S101",  # asserts ok in tests
    "E501",  # let formatter handle long lines
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"scripts/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "agents", "mcp_servers", "lambdas"]

# -----------------------------------------------------------------------------
# MyPy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["venv", ".venv", "frontend", "infra"]

[[tool.mypy.overrides]]
module = ["nsepython.*", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "langchain_postgres.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "evals: long-running LLM evaluation tests (deselect with -m 'not evals')",
    "e2e: end-to-end tests requiring full stack up",
    "slow: tests that take >5s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
